--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "cmdk": "1.0.4",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
-    "next": "14.1.2",
+    "next": "^15.0.0",
     "next-themes": "^0.4.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
